# sstreamer

./: Makefile.am  Makefile.in  configure  configure.ac
src/: Makefile.am  Makefile.in  main.c
